# badtranslate

./: .gitignore  Cargo.toml  README.md
src/: lang-list.json  main.rs  translate.rs
